force-app/main/default/objects/Scribe_Call_Log__c/Scribe_Call_Log__c.object-meta.xml
<CustomObject>
    <!--
      Assigns Scribe_Call_Log_Record_Page as the org-default Lightning record page
      for this object. This is how "org default record page" is expressed in
      metadata: an ActionOverride on the View action with type Flexipage. Without
      it the flexipage exists but no user ever lands on it.
    -->
    <description>The raw call recap/transcript the rep provided, plus a link to the Opportunity. Permanent audit trail of what Scribe was working from and the source every change-log entry traces back to.</description>
    <label>Scribe Call Log</label>
    <nameField>
        <displayFormat>CALL-{00000}</displayFormat>
        <label>Call Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scribe Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>