force-app/main/default/objects/Scribe_Call_Log__c/fields/Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>Call_Summary__c</fullName>
    <label>Call Summary</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>The raw recap, bullet list, stream-of-consciousness note, or pasted transcript the rep provided. Scribe parses this once and every downstream action reads from that single parse.</description>
</CustomField>