force-app/main/default/objects/Scribe_Call_Log__c/fields/Extraction_JSON__c.field-meta.xml
<CustomField>
    <fullName>Extraction_JSON__c</fullName>
    <label>Extraction JSON</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>The single structured parse of the recap (commitments, people, sentiment, stage signals), cached at log time so every downstream topic reads the same extraction instead of re-parsing the text.</description>
</CustomField>