force-app/main/default/objects/Scribe_Call_Log__c/fields/Logged_By_Rep__c.field-meta.xml
<CustomField>
    <fullName>Logged_By_Rep__c</fullName>
    <label>Logged By Rep</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Scribe_Call_Logs</relationshipName>
    <relationshipLabel>Scribe Call Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rep whose conversation produced this recap. The running user is the integration user, so this captures the human behind the call.</description>
</CustomField>