force-app/main/default/objects/Scribe_Call_Log__c/fields/Objections__c.field-meta.xml
<CustomField>
    <fullName>Objections__c</fullName>
    <label>Objections Raised</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Objections or concerns raised on the call, as extracted from the recap. Blank when none were mentioned.</description>
</CustomField>