force-app/main/default/objects/Scribe_Call_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Scribe_Call_Logs</relationshipName>
    <relationshipLabel>Scribe Call Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Opportunity this recap was logged against.</description>
</CustomField>