force-app/main/default/objects/Scribe_Call_Log__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Positive</fullName><default>false</default><label>Positive</label></value>
            <value><fullName>Neutral</fullName><default>true</default><label>Neutral</label></value>
            <value><fullName>Negative</fullName><default>false</default><label>Negative</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Overall sentiment Scribe extracted from the recap. Neutral when the recap is not clearly positive or negative.</description>
</CustomField>