force-app/main/default/objects/Scribe_Call_Log__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Chat</fullName><default>true</default><label>Chat</label></value>
            <value><fullName>Dictation</fullName><default>false</default><label>Dictation</label></value>
            <value><fullName>Transcript</fullName><default>false</default><label>Transcript</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>