force-app/main/default/objects/Scribe_Call_Log__c/fields/Stage_At_Log__c.field-meta.xml
<CustomField>
    <fullName>Stage_At_Log__c</fullName>
    <label>Opportunity Stage At Log</label>
    <type>Text</type>
    <length>255</length>
    <description>The Opportunity StageName at the moment this call was logged, for historical context.</description>
</CustomField>