force-app/main/default/objects/Scribe_Call_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Logged_By_Rep__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Source_Channel__c</columns>
    <columns>Call_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Call Logs</label>
</ListView>