force-app/main/default/objects/Scribe_Call_Log__c/listViews/Recent.listView-meta.xml
<ListView>
    <fullName>Recent</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Logged_By_Rep__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Call_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Logged This Week</label>
</ListView>